G/tests/fail/addr_rvalue.g
fn main() -> int {
    let p = &(1 + 2)
    return 0
}
